k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxsim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taxsim
  template:
    metadata:
      labels:
        app: taxsim
    spec:
      containers:
        - name: taxsim
          image: humeshdeshmukh/taxsim:dev
          ports:
            - containerPort: 3000
          # 🔴 remove readinessProbe and livenessProbe for now
