k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: taxsim
spec:
  type: NodePort
  selector:
    app: taxsim
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
